[tool.poetry]
name = "gcpimagegeneration"
version = "0.1.0"
description = ""
authors = ["nulzo <nolanpgregory@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
vertexai = "^1.43.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
